[project]
name = "spleeter"
version = "2.4.2"
description = "The Deezer source separation library with pretrained models based on tensorflow."
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = { text = "MIT License" }
authors = [{ name = "Deezer Research", email = "spleeter@deezer.com" }]
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "ffmpeg-python>=0.2.0,<0.3.0",
    "httpx[http2]>=0.19.0,<0.20.0",
    "typer>=0.3.2,<0.4.0",
    "pandas>=1.3.0,<2.0.0",
    "norbert>=0.2.1,<0.3.0",
    "numpy<2.0.0",
    'tensorflow-io-gcs-filesystem==0.32.0; sys_platform != "darwin" or platform_machine == "x86_64"',
    'tensorflow==2.12.1; sys_platform != "darwin" or platform_machine == "x86_64"',
    'tensorflow-macos>=2.11.0,<2.17.0; sys_platform == "darwin" and platform_machine == "arm64"',
    'tensorflow-metal; sys_platform == "darwin" and platform_machine == "arm64"',
]

[project.urls]
Homepage = "https://github.com/deezer/spleeter"
Repository = "https://github.com/deezer/spleeter"

[project.scripts]
spleeter = "spleeter.__main__:entrypoint"

[project.optional-dependencies]
evaluation = ["musdb>=0.4.0,<0.5.0", "museval>=0.4.0,<0.5.0"]

[dependency-groups]
dev = [
    "pytest>=6.2.1,<7.0.0",
    "isort>=5.7.0,<6.0.0",
    "black>=21.7b0,<22.0.0",
    "mypy>0.790,<1.0",
    "flake8>=5.0.0,<6.0.0",
    "pytest-forked>=1.3.0,<2.0.0",
    "musdb>=0.4.0,<0.5.0",
    "museval>=0.4.0,<0.5.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-W ignore::FutureWarning -W ignore::DeprecationWarning -vv --forked"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spleeter"]
include = ["LICENSE", "spleeter/resources/*.json"]
